--- a/07-audifonos/css/styles.css
+++ b/07-audifonos/css/styles.css
@@ -4,7 +4,7 @@
     --gray: #3B3B3B;
     --white: #FFFFFF;
     --black: #1F1E1E;
-    --lightGray: #1e1e1;
+    --lightGray: #e1e1e1;
 
     --separation: 5rem;
 
@@ -236,4 +236,111 @@ img {
 .about-tech-text p {
     font-size: 2rem;
     line-height: 2;
+}
+
+/* MODELS */
+
+.models {
+    padding: var(--separation) 0;
+}
+
+.models-title {
+    font-size: 6rem;
+    margin-bottom: var(--separation);
+}
+
+.model-list {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+@media (min-width: 992px) {
+    .model-list {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 20rem);
+        gap: 4rem;
+    }
+}
+
+.model {
+    background-color: var(--lightGray);
+    /*background-image: url("../img/modelo-z.svg");*/
+    /*background-repeat: no-repeat;*/
+    /*background-position: right;*/
+    margin-bottom: 2rem;
+    padding-left: 4rem;
+    color: var(--primary);
+    border-radius: 2rem;
+    min-height: 20rem;
+    background-repeat: no-repeat;
+    background-position: 95% center;
+    background-size: 15rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition-property: transform, background-size;
+    transition-duration: .5s;
+}
+
+.model:hover{
+    transform: scale(1.1);
+    background-size: 30rem;
+}
+
+@media (min-width: 992px) {
+    .model {
+        margin-bottom: 0;
+    }
+}
+
+.model:nth-child(1) {
+    margin-bottom: 0;
+}
+
+.model h3 {
+    font-size: 2.4rem;
+}
+
+.model .price {
+    font-size: 4rem;
+    font-weight: 900;
+    line-height: 0;
+}
+
+.model-x {
+    background-image: url("../img/modelo-x.svg")
+}
+
+.model-y {
+    background-image: url("../img/modelo-y.svg");
+}
+
+@media (min-width: 992px) {
+    .model-y {
+        grid-row: 2/3;
+        grid-column: 1/2;
+    }
+}
+
+.model-z {
+    background-image: url("../img/modelo-z.svg");
+    background-color: var(--primary);
+    color: var(--white);
+}
+
+@media (min-width: 992px) {
+    .model-z {
+        grid-row: 1/3;
+        grid-column: 2/3;
+        background-size: 25rem;
+    }
+
+    .model-z h3 {
+        font-size: 4rem;
+    }
+}
+
+.model-z .price {
+    font-size: 6rem;
 }
