--- a/07-audifonos/css/styles.css
+++ b/07-audifonos/css/styles.css
@@ -283,7 +283,7 @@ img {
     transition-duration: .5s;
 }
 
-.model:hover{
+.model:hover {
     transform: scale(1.1);
     background-size: 30rem;
 }
@@ -344,3 +344,90 @@ img {
 .model-z .price {
     font-size: 6rem;
 }
+
+/* Newsletter */
+
+.newsletter {
+    background-image: linear-gradient(to bottom, transparent 50%, var(--white) 50%), url("../img/newsletter.jpg");
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: 100%, 65rem;
+    padding: var(--separation) 0;
+}
+
+@media (min-width: 768px) {
+    .newsletter {
+        background-image: linear-gradient(to right, transparent 50%, var(--white) 50%), url("../img/newsletter.jpg");
+        background-size: 100%, 100rem;
+        background-position: center, 0 0;
+        padding: 10rem 0;
+    }
+}
+
+@media (min-width: 2200px) {
+    .newsletter {
+        background-image: linear-gradient(to right, transparent 50%, var(--white) 50%), url("../img/newsletter.jpg");
+        background-size: 100%, 200rem;
+        background-position: center, 0 -30rem;
+        padding: 10rem 0;
+    }
+}
+
+.newsletter-content {
+    display: grid;
+    grid-template-rows: repeat(2, 30rem);
+}
+
+@media (min-width: 768px) {
+    .newsletter-content {
+        grid-template-rows: unset;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 8rem;
+    }
+}
+
+.newsletter-text {
+    grid-row: 2/3;
+}
+
+@media (min-width: 768px) {
+    .newsletter-text {
+        grid-row: unset;
+        grid-column: 2/3;
+    }
+}
+
+.newsletter-text .title {
+    font-size: 4rem;
+    font-weight: 900;
+}
+
+.newsletter-text .form input[type="email"] {
+    width: 100%;
+    padding: 1rem;
+}
+
+.newsletter-text .form input[type="submit"] {
+    padding: 2rem 0;
+    width: 100%;
+    background-color: var(--primary);
+    color: var(--white);
+    font-weight: 900;
+    font-size: 2rem;
+    text-transform: uppercase;
+    border: none;
+}
+
+/* FOOTER */
+
+.footer p {
+    padding: 2rem 0;
+    text-align: center;
+    font-family: var(--secondary);
+    color: var(--primary);
+    text-transform: uppercase;
+    font-size: 2.4rem;
+    font-weight: 900;
+}
+
+
