--- a/08-forest-architecture/css/styles.css
+++ b/08-forest-architecture/css/styles.css
@@ -3,7 +3,7 @@
     --black: #111111;
     --gray: #343A40;
 
-    --primaryFont: "Ralaway", sans-serif;
+    --primaryFont: "Raleway", sans-serif;
 }
 
 html {
@@ -74,4 +74,115 @@ img {
 
 .mt-5 {
     margin-top: 5rem;
+}
+
+/* header */
+
+.header {
+    min-height: 60rem;
+    background-image: url("../img/hero.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding: 5rem 0;
+}
+
+.header-container {
+    display: flex;
+    flex-direction: column;
+    height: calc(60rem - 4rem);
+    justify-content: space-between;
+    color: var(--white);
+
+    .header-top {
+        @media (min-width: 768px) {
+            display: flex;
+            justify-content: space-between;
+            gap: 1rem;
+        }
+
+        .logo h1 {
+            text-align: center;
+            font-size: 3rem;
+            font-weight: 300;
+
+            @media (min-width: 768px) {
+                font-size: 5rem;
+            }
+
+            & span {
+                font-weight: 900;
+            }
+        }
+
+        .contact {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            font-size: 2rem;
+
+            @media (min-width: 768px) {
+                flex-grow: 2;
+                align-items: flex-end;
+            }
+
+            .number-phone {
+                color: var(--white);
+                margin-bottom: 1rem;
+            }
+
+            .navbar {
+                color: var(--white);
+
+                @media (min-width: 768px) {
+                    display: flex;
+                    justify-content: flex-end;
+                    flex-wrap: wrap;
+                }
+
+                @media (min-width: 1200px) {
+                    flex-wrap: unset;
+                }
+
+                & a {
+                    display: block;
+                    color: var(--white);
+                    padding: .5rem;
+                    text-align: center;
+
+                    @media (min-width: 768px) {
+                        padding: 1rem 2rem;
+                    }
+                }
+
+                @media (min-width: 768px) {
+                    & a:last-child {
+                        padding-right: 0;
+                    }
+                }
+
+            }
+        }
+    }
+
+    .header-slogan {
+        text-align: center;
+        line-height: 1;
+
+        @media (min-width: 768px) {
+            text-align: right;
+        }
+
+        & h1 {
+            margin: 0;
+            font-size: 3rem;
+            @media (min-width: 768px) {
+                font-size: 5rem;
+            }
+        }
+
+        & p {
+            margin: 0;
+        }
+    }
 }
