--- a/08-forest-architecture/css/styles.css
+++ b/08-forest-architecture/css/styles.css
@@ -24,6 +24,7 @@ body {
 h1, h2, h3 {
     font-weight: 900;
     margin: 1rem 0 4rem 0;
+    line-height: 1.2;
 }
 
 h1 {
@@ -133,7 +134,7 @@ img {
                 justify-content: center;
             }
 
-            .number-phone::before{
+            .number-phone::before {
                 content: "";
                 background-image: url("../img/telefono.png");
                 width: 4rem;
@@ -201,6 +202,31 @@ img {
 
         & p {
             margin: 0;
+        }
+    }
+}
+
+.about {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    background-image: url("../img/nosotros.jpg");
+    background-repeat: no-repeat;
+    background-position: bottom center;
+
+    @media (min-width: 992px) {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .about-container {
+        background-color: var(--white);
+        padding: 5rem;
+
+        & h2, & p {
+            margin-bottom: 1rem;
+        }
+
+        @media (min-width: 992px) {
+            grid-column: 2/4;
         }
     }
 }
