--- a/08-forest-architecture/css/styles.css
+++ b/08-forest-architecture/css/styles.css
@@ -318,3 +318,75 @@ img {
         }
     }
 }
+
+/* GALLERY */
+
+.gallery {
+    .images-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+
+        @media (min-width: 768px) {
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+        }
+
+        & img {
+            object-fit: cover;
+            height: 100%;
+        }
+
+        .image:nth-child(2) {
+            grid-column: 2/3;
+            grid-row: 1/3;
+            @media (min-width: 768px) {
+                grid-column: 1/2;
+                grid-row: 2/4;
+            }
+        }
+
+        .image:nth-child(3) {
+            grid-column: 2/3;
+            grid-row: 3/5;
+            @media (min-width: 768px) {
+                grid-column: 2/3;
+                grid-row: 1/2;
+            }
+        }
+
+        .image:nth-child(6) {
+            grid-column: 1/2;
+            grid-row: 2/4;
+            @media (min-width: 768px) {
+                grid-column: 3/4;
+                grid-row: 1/3;
+            }
+        }
+    }
+}
+
+
+.footer {
+    background-image: url("../img/footer_bg.jpg");
+    background-repeat: no-repeat;
+    background-size: 300rem;
+    background-position: center -25rem;
+
+    .header-container {
+        justify-content: flex-end;
+        padding-bottom: 10rem;
+    }
+
+    .copy {
+        background-color: var(--black);
+
+        & p {
+            margin: 0;
+            color: var(--white);
+            font-size: 2rem;
+            padding: 2rem;
+            text-align: center;
+        }
+    }
+}
