--- a/10-nucleus-eWallet/css/styles.css
+++ b/10-nucleus-eWallet/css/styles.css
@@ -4,40 +4,151 @@
     --black: #000000;
     --primaryFont: 'Poppins', sans-serif;
 }
+
 html {
     font-size: 62.5%;
     box-sizing: border-box;
 }
+
 *, *:before, *:after {
     box-sizing: inherit;
 }
+
 body {
     font-family: var(--primaryFont);
     font-size: 1.6rem;
     line-height: 1.8;
 }
+
 h1, h2, h3 {
     font-weight: 900;
     margin: 2rem 0;
 }
+
 h1 {
     font-size: 5rem;
 }
+
 h2 {
     font-size: 4.6rem;
 }
+
 h3 {
     font-size: 3rem;
 }
+
 a {
     text-decoration: none;
 }
+
 img {
     max-width: 100%;
     display: block;
 }
+
 .container {
     max-width: 120rem;
     margin: 0 auto;
     width: 90%;
 }
+
+/* HEADER */
+
+.header {
+    background-image: url("../img/header_bg.svg");
+    background-repeat: no-repeat;
+    background-position: right top;
+    background-size: 10rem;
+    padding: 5rem 0;
+    @media (min-width: 768px) {
+        background-size: 50rem;
+    }
+    @media (min-width: 992px) {
+        background-size: 75rem;
+    }
+
+    @media (min-width: 1280px) {
+        background-size: 110rem;
+    }
+}
+
+.header__container {
+    max-width: 120rem;
+    margin: 0 auto;
+    width: 90%;
+}
+
+.header__bar {
+    @media (min-width: 768px) {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.header__logo {
+    width: 15rem;
+    margin: 0 auto 3rem auto;
+    @media (min-width: 768px) {
+        margin: 0;
+    }
+}
+
+.header__grid {
+    @media (min-width: 768px) {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 4rem;
+        align-items: center;
+    }
+}
+
+.header__heading {
+    text-align: center;
+    font-size: 3rem;
+    @media (min-width: 768px) {
+        text-align: left;
+        font-size: 5rem;
+        line-height: 1.2;
+    }
+}
+
+.header__button {
+    background-color: var(--primary);
+    display: block;
+    padding: 1rem;
+    text-align: center;
+    color: var(--white);
+    margin-bottom: 4rem;
+    @media (min-width: 768px) {
+        padding: 1rem 3rem;
+        display: inline-block;
+    }
+}
+
+.header-image {
+    @media (min-width: 768px) {
+        max-width: 30rem;
+        margin: 0 auto;
+    }
+}
+
+.navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    @media (min-width: 768px) {
+        flex-direction: row;
+        align-items: flex-start;
+        gap: 2rem;
+    }
+}
+
+.navbar__link {
+    padding: .5rem 0;
+    color: var(--primary);
+    @media (min-width: 768px) {
+        color: var(--white);
+    }
+}
+
+
