--- a/10-nucleus-eWallet/css/styles.css
+++ b/10-nucleus-eWallet/css/styles.css
@@ -10,7 +10,9 @@ html {
     box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 }
 
@@ -20,7 +22,9 @@ body {
     line-height: 1.8;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-weight: 900;
     margin: 2rem 0;
 }
@@ -60,9 +64,11 @@ img {
     background-position: right top;
     background-size: 10rem;
     padding: 5rem 0;
+
     @media (min-width: 768px) {
         background-size: 50rem;
     }
+
     @media (min-width: 992px) {
         background-size: 75rem;
     }
@@ -82,6 +88,7 @@ img {
 .header__logo {
     width: 15rem;
     margin: 0 auto 3rem auto;
+
     @media (min-width: 768px) {
         margin: 0;
     }
@@ -99,6 +106,7 @@ img {
 .header__heading {
     text-align: center;
     font-size: 3rem;
+
     @media (min-width: 768px) {
         text-align: left;
         font-size: 5rem;
@@ -113,6 +121,7 @@ img {
     text-align: center;
     color: var(--white);
     margin-bottom: 4rem;
+
     @media (min-width: 768px) {
         padding: 1rem 3rem;
         display: inline-block;
@@ -130,6 +139,7 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
+
     @media (min-width: 768px) {
         flex-direction: row;
         align-items: flex-start;
@@ -140,6 +150,7 @@ img {
 .navbar__link {
     padding: .5rem 0;
     color: var(--primary);
+
     @media (min-width: 768px) {
         color: var(--white);
     }
@@ -160,6 +171,7 @@ img {
     display: flex;
     flex-direction: column-reverse;
     gap: 4rem;
+
     @media (min-width: 768px) {
         display: grid;
         grid-template-rows: unset;
@@ -186,6 +198,26 @@ img {
     }
 }
 
+.cardList__element--2col {
+    @media (min-width: 768px) {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 2rem;
+    }
+}
+
+.cardList__porcent {
+    font-size: 6rem;
+    margin: 0;
+    color: var(--primary);
+    font-weight: 900;
+
+    @media (min-width: 768px) {
+        font-size: 4rem;
+    }
+}
+
 .cardList__heading {
     text-align: center;
     color: var(--primary);
@@ -207,7 +239,8 @@ img {
     position: relative;
     overflow: hidden;
 
-    &:before, &:after {
+    &:before,
+    &:after {
         background-color: var(--white);
         content: '';
         height: 20rem;
@@ -244,5 +277,39 @@ img {
         grid-template-columns: repeat(2, 1fr);
         align-items: center;
         column-gap: 5rem;
+    }
+}
+
+/* Comissions */
+
+.commissions {
+    text-align: center;
+}
+
+.commissions__header {
+    font-size: 4.6rem;
+}
+
+.commissions__grid {
+    @media (min-width: 768px) {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 5rem;
+        justify-items: center;
+        align-items: center;
+    }
+}
+
+.commissions__text {
+    font-size: 2.4rem;
+    font-weight: 700;
+}
+
+.commissions__image {
+    margin-top: 5rem;
+
+    @media (min-width: 768px) {
+        width: 90%;
+        margin: 0;
     }
 }
